# tcm

./: CMakeLists.txt  CMakePresets.json  README.md
.github/worflows/: ci.yaml
.github/workflows/: build.yaml  build.yml  ci.yaml  ci_ubuntu_mac_os.yml  ci_ubuntu_macos.yml  ci_windows.yml  documentation.yaml  documentation.yml  windows.yaml  windows.yml
assets/: shell_minimal.html
cmake/: get_tcm.cmake  tcm.cmake
cmake/tcm/: code_block.cmake  get_cpm.cmake  include_all.cmake  prevent_in_source_build.cmake  setup_cache.cmake  setup_version.cmake  support_computed_gotos.cmake  utility.cmake  warning_guard.cmake
docs/: CMakeLists.txt
docs/doxygen/: Doxyfile.in  DoxygenLayout.xml  custom.css
docs/pages/: Modules.md  benchmarks.md  documentation.md  emscripten.md  examples.md  intro.md  ispc.md  logging.md  tests.md  tools.md  utility.md  variables.md  version.md
docs/pages/modules/: benchmarks.md  cpm.md  documentation.md  emscripten.md  examples.md  logging.md  template.md  tests.md  tools.md  utility.md  variables.md  version.md
src/: 00_Options.cmake  01_Logging.cmake  02_Utility.cmake  03_Variables.cmake  04_Code_Blocks.cmake  04_Shared.cmake  05_CPM.cmake  05_Tools.cmake  06_Cache.cmake  06_Setup_Cache.cmake  07_Benchmarks.cmake  07_Setup_Project_Version.cmake  07_Version.cmake  08_Add_Benchmarks.cmake  08_Benchmarks.cmake  08_Tests.cmake  09_Add_Tests.cmake  09_Examples.cmake  09_Tests.cmake  10_Add_Examples.cmake  10_Examples.cmake  10_ISPC.cmake  11_Emscripten.cmake  11_ISPC.cmake  12_Emscripten.cmake  12_Swig.cmake  98_Docs.cmake  98_Setup_Docs.cmake  99_Closure.cmake  CMakeLists.txt  README.md  tcm.cmake
src/cmake/: arguments.cmake  asserts.cmake  benchmarks.cmake  closure.cmake  documentation.cmake  emscripten.cmake  examples.cmake  ispc.cmake  logging.cmake  options.cmake  prelude.cmake  shared_library.cmake  tests.cmake  tools.cmake  utility.cmake  variables.cmake
src/in/: README.md.in  get_tcm.cmake.in  tcm.cmake.in
tests/: CMakeLists.txt  VERSION  log.cmake
tests/arguments/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt  bench.cpp
tests/code-block/: CMakeLists.txt  code_block.md
tests/emscripten/: CMakeLists.txt
tests/examples/: CMakeLists.txt  README.md
tests/examples/examples/: main_1.cpp
tests/examples/examples/section_1/func_a/: main_1.cpp
tests/examples/examples/section_1/func_b/: main_1.cpp
tests/examples/examples/section_2/: main_3.cpp
tests/examples/my_lib/: my_lib.c  my_lib.h
tests/ispc/: CMakeLists.txt  main.cpp
tests/logging/: CMakeLists.txt
tests/my_lib/: my_lib.c
tests/my_lib/include/my_lib/: my_lib.h
tests/shared_static/: CMakeLists.txt  main.cpp
tests/shared_static/my_lib/: my_lib.h
tests/simple/: CMakeLists.txt
tests/test/: CMakeLists.txt  test.cpp
tests/utility/: CMakeLists.txt  main.cpp  test_tcm_target_copy_assets.cmake
tests/utility/assets/sub_1/: copy_me.txt
